--- a/SOC_working.ipynb
+++ b/SOC_working.ipynb
@@ -175,7 +175,7 @@
    "outputs": [],
    "source": [
     "N = 2000\n",
-    "f = 0.001 #f leak (fraction of leak)\n",
+    "f = 0.01 #f leak (fraction of leak)\n",
     "f = 1-f\n",
     "mean_degree = 4\n",
     "\n",
@@ -329,7 +329,8 @@
      "output_type": "stream",
      "text": [
       "Step: 0\n",
-      "Step: 1\n"
+      "Step: 1\n",
+      "Step: 2\n"
      ]
     }
    ],
