running on cluster now

--- a/SOC_working.ipynb
+++ b/SOC_working.ipynb
@@ -170,9 +170,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "set_edge_attributes() got multiple values for argument 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-a40b6a405d3f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0medge\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrec\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG_dir\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0medges\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0mrecency\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0medge\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_edge_attributes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG_dir\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrecency\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"recency\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m \u001b[0;31m#R = temp.reshape(N,N)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;31m#R = np.multiply(R,A)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: set_edge_attributes() got multiple values for argument 'name'"
+     ]
+    }
+   ],
    "source": [
     "N = 2000\n",
     "f = 0.01 #f leak (fraction of leak)\n",
@@ -228,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +458,7 @@
     "        max_endpoints.append((c2,c1))\n",
     "        max_endpoints_r.append(R[c2,c1])\n",
     "    \n",
-    "indices = np.array(heapq.nlargest(10, range(len(max_endpoints_r)), max_endpoints_r.__getitem__))\n",
+    "indices = np.array(heapq.nlargest(1, range(len(max_endpoints_r)), max_endpoints_r.__getitem__))\n",
     "i,j=tuple(zip(*[max_endpoints[i] for i in indices]))"
    ]
   },
@@ -547,6 +559,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1,), (2,)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(zip(*[(1,2)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
@@ -556,23 +588,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([261, 264, 341, 365, 395, 398, 205, 399, 414, 431])"
+       "array([2])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l=[max(e) for e in G.edges()]\n",
-    "np.array(heapq.nlargest(10, range(len(l)), l.__getitem__))"
+    "th=[5,4,7,6]\n",
+    "np.array(heapq.nlargest(1, range(len(th)), th.__getitem__))"
    ]
   },
   {
